Initial implementation of Process Queue block
Currently the contents of the actual queue don't get sync'd to the
client properly.

--- a/src/main/resources/assets/mattomatic/lang/en_us.json
+++ b/src/main/resources/assets/mattomatic/lang/en_us.json
@@ -1,1 +1,7 @@
-{}
+{
+  "item.mattomatic.process_queue": "Process Queue",
+  "block.mattomatic.process_queue": "Process Queue",
+  "screen.mattomatic.process_queue": "Process Queue",
+  "mattomatic.process_queue.button.horizontal.tooltip": "Move items from left to right",
+  "mattomatic.process_queue.button.vertical.tooltip": "Move items from top to bottom"
+}
